Mon Feb 19 13:52:23 GMT 2001 Chris Emerson <chris.emerson@omsee.com>

	* Added new test collapsekey2 designed to work with muscat36
	  databases, which have different key handling.  Added two new
	  categories of tests to cope with this.
	
	* Adjusted BackendManager's key generation, and updated
	  test_specialchars1() accordingly.

Fri Feb 16 17:26:59 GMT 2001 Chris Emerson <chris.emerson@omsee.com>

	* Implemented a test for keep-alives

	* Added "-tNNNN" option to omprogsrv to pass a timeout value in.

	* Added get_network_database() in apitest to set the timeout.

Fri Feb 16 16:13:47 GMT 2001 Chris Emerson <chris.emerson@omsee.com>

	* Incremented the remote protocol version, since a new message
	  type has been added.

Fri Feb 16 15:55:31 GMT 2001 Chris Emerson <chris.emerson@omsee.com>

	* Added an OmDatabase keep_alive() method to gently prod any
	  remote databases.  Applications can use it to avoid the remote
	  servers timing out between queries.  Not properly tested yet...

Thu Feb 15 19:05:24 GMT 2001 Chris Emerson <chris.emerson@omsee.com>

	* The remote server now supports a seperate timeout used while
	  idle, rather than actually servicing a request from the client.
	  Options --idle-timeout and --active-timeout added to omtcpsrv,
	  and --timeout sets both timeouts.
	
	* Added a documentation comment or two.

Wed Feb 14 18:43:00 GMT 2001  Richard Boulton <richard.boulton@omsee.com>

	* In Muscat3.6 backends, don't read the key from the keyfile unless
	  keyno is 0.

Tue Feb 13 13:57:34 GMT 2001 Andy MacFarlane <andym@omsee.com>

	* Added parameter expand_k in omsettings in order to change
	  value of weighting in expand process.

Tue Feb 13 13:25:45 GMT 2001 Chris Emerson <chris.emerson@omsee.com>

	* Network timeouts now apply to write() operations as well
	  as read().

	* SocketLineBuf::do_writeline() now correctly deals with EAGAIN.

	* SocketServer has new method writeline() which handles write
	  access to the OmLineBuf.
